Make the actual diff.
